--- a/test.html
+++ b/test.html
@@ -16,7 +16,8 @@
         <br>
 
         This website shows you what reddit frontpage looks like the day you created your account.<br>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ>i.puthtml.com</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">i.puthtml.com
+        </a>
 
     </body>
 
